@@ -12,8 +12,7 @@ postinst_SCRIPTS = nfsroot-postinst
 prermdir = /etc/kernel/prerm.d
 prerm_SCRIPTS = nfsroot-prerm
 
-rootsbindir = /sbin
-rootsbin_SCRIPTS = nfsroot-rebuild
+sbin_SCRIPTS = nfsroot-rebuild nfsroot-setdefault
 
 # N.B. targets named 'install' and 'check' confuse automake - avoid them
 install-data-local:
@@ -22,4 +21,4 @@ install-data-local:
 	-$(top_srcdir)/config/install-sh -m 755 \
 		xcheck   $(DESTDIR)$(dracutmoddir)/check 
 
-EXTRA_DIST = xcheck xinstall installkernel xnfsroot.conf nfsroot-postinst nfsroot-prerm nfsroot-rebuild
+EXTRA_DIST = xcheck xinstall installkernel xnfsroot.conf nfsroot-postinst nfsroot-prerm
