@@ -16,5 +16,4 @@ kver=$1
 kdir=$(dirname $2)
 
 configpxe -d $kver
-echo Boot options: >$kdir/pxelinux.msg
-configpxe -l >>$kdir/pxelinux.msg
+nfsroot-setdefault
