@@ -21,7 +21,6 @@ BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}
 
 %define bootdir /boot
 %define isolinuxdir /isolinux
-%define rootsbindir /sbin
 
 %description
 Diskless boot support.
@@ -51,7 +50,7 @@ if ! [ -f %{_sysconfdir}/fstab ]; then
     install -m 644 %{_datadir}/nfsroot/initial-fstab %{_sysconfdir}/fstab
 fi
 mkdir -p -m 755 /writeable
-%{rootsbindir}/nfsroot-rebuild
+%{_sbindir}/nfsroot-rebuild
 
 %preun
 if [ "$1" = "0" ]; then
@@ -78,7 +77,7 @@ fi
 %{_sysconfdir}/dracut.conf.d/*
 %{_sysconfdir}/rc.nfsroot*
 %{_datadir}/nfsroot
-%{rootsbindir}/*
+%{_sbindir}/*
 %{_mandir}/man8/*
 %{_initrddir}/nfsroot
 %{_datadir}/dracut/modules.d/*
