@@ -1,3 +1,14 @@
+2010-01-08 Jim Garlick <garlick@llnl.gov>
+
+	* dracut/nfsroot-setdefault : New.
+
+	* dracut/nfsroot-rebuild, dracut/nfsroot-prerm, dracut-postinst :
+	Call nfsroot-setdefault to move default symlinks and update
+	pxelinux.msg file, starring the default.
+
+	* dracut/Makefile.am, dracut.spec.in : Move scripts from /sbin
+	to /usr/sbin.
+
 2010-01-07 Jim Garlick <garlick@llnl.gov>
 
 	* boot/pxelinux.cfg, configpxe/configpxe, dracut/nfsroot-postinst,
